# AdventOfCode202x

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  rustfmt.toml
2015/day01/: not_quite_lisp.rs
2015/day02/: no_math.rs
2020/day01/: find_sum_2020.gd  find_sum_2020.py
2020/day02/: valid_passwords.py
2020/day03/: tree_slopes.py
2020/day04/: valid_passports.py
2020/day05/: boarding_passes.py
2020/day06/: customs_forms.py
2020/day07/: bags_in_bags.py
2020/day08/: inf_loop_check.py
2020/day09/: xmas_cipher.py
2020/day10/: jolt_adapters.py
2020/day11/: game_of_life_seating.py
2020/day12/: ship_navigation.py
2020/day13/: bus_times.py
2020/day14/: mem_mask.py
2020/day15/: elves_game.py
2020/day16/: tickets.rs
2020/day17/: conway_cubes.rs
2020/day18/: expr_parser.rs
2020/day19/: peg_parser.rs
2020/day20/: image_tiles.rs
2020/day21/: allergens.rs
2020/day22/: crab_combat.rs
2020/day23/: crab_cups.rs
2020/day24/: hex_tiles.rs
2020/day25/: combo_breaker.rs
2021/day01/: sonar_depth.py
2021/day02/: dive.py
2021/day03/: binary_diagnostic.py
2021/day04/: bingo_squid.py
2021/day05/: hydrothermal_venture.rs
2021/day06/: lanternfish.rs
2021/day07/: whale_crabs.rs
benches/: criterion_benchmark.rs  test_benchmark.py
day04/: valid_passports.py
day09/: xmas_cipher.py
day10/: jolt_adapters.py
day11/: game_of_life_seating.py
day13/: bus_times.py
day15/: elves_game.py
day18/: expr_parser.rs
day21/: allergens.rs
day22/: crab_combat.rs
day25/: combo_breaker.rs
src/: generated.rs  lib.rs  main.rs
(+22 files in other folders)
