[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["strank <strank@strank.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools="0.10.0"
ndarray="0.14.0"
phf = { version = "0.7.24", features = ["macros"] }
