[package]
name = "advent_of_code_202x"
version = "0.2.0"
authors = ["strank <strank@strank.info>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools="0.10"
ndarray="0.15"
phf = { version = "0.10", features = ["macros"] }
num = "0.4"

[build-dependencies]
glob = "0.3"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "criterion_benchmark"
harness = false
